# primtest

./: README.md  config.guess  config.sub  configure.ac  configure~
src/: Makefile.in  config.h  config.h.in  main.c  utils.c  utils.h
